Fix ProgressBar in Resume page

--- a/assets/demo/style-demo.css
+++ b/assets/demo/style-demo.css
@@ -1,3 +1,9 @@
+/* ------------------------------------------------
+ Author: ArtStyles (Art)
+ 
+ Template Name: ARCDECO.
+ version: 1.0.0
+------------------------------------------------ */
 a.underlineNone {
   text-decoration: none;
 }
